[package]
name = "livebox-exporter-rs"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.5.3"
cookie = "0.18.0"
env_logger = "0.11.3"
httpmock = "0.7.0"
hyper = { version = "1.8.1", features = ["full"] }
log = "0.4.21"
maplit = "1.0.2"
prometheus_exporter_base = { version = "1.4.0", features = ["hyper_server"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["full"] }
